// This is the public API offered by your entity.
syntax = "proto3";

package com.example; // <1>

import "akkaserverless/annotations.proto"; // <2>
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message IncreaseValue { // <3>
  string counter_id = 1 [(akkaserverless.field).entity_key = true]; // <4>
  int32 value = 2;
}

message DecreaseValue {
  string counter_id = 1 [(akkaserverless.field).entity_key = true];
  int32 value = 2;
}

message ResetValue {
  string counter_id = 1 [(akkaserverless.field).entity_key = true];
}

message GetCounter {
  string counter_id = 1 [(akkaserverless.field).entity_key = true];
}

message CurrentCounter { // <5>
  int32 value = 1;
}

service CounterService { // <6>
  option (akkaserverless.service) = { // <7>
    type : SERVICE_TYPE_ENTITY
    component : "com.example.domain.Counter"
  };

  rpc Increase (IncreaseValue) returns (google.protobuf.Empty);
  rpc Decrease (DecreaseValue) returns (google.protobuf.Empty);
  rpc Reset (ResetValue) returns (google.protobuf.Empty);
  rpc GetCurrentCounter (GetCounter) returns (CurrentCounter);
}
